--- a/Views/Pizza/Create.cshtml
+++ b/Views/Pizza/Create.cshtml
@@ -14,24 +14,28 @@
         <div class="mb-4">
             <h3>Nome: </h3>
             <input asp-for="Nome" />
+            <span asp-validation-for="Nome" class="text-danger"></span>
                     
         </div>
 
         <div class="mb-4">
             <h3>Descrizione: </h3>
             <input asp-for="Descrizione" />
+            <span asp-validation-for="Descrizione" class="text-danger"></span>
                     
         </div>
 
         <div class="mb-4">
             <h3>Immagine: </h3>
             <input asp-for="Immagine" />
+            <span asp-validation-for="Immagine" class="text-danger"></span>
                     
         </div>
 
         <div class="mb-4">
             <h3>Prezzo: </h3>
             <input asp-for="Prezzo" />
+            <span asp-validation-for="Prezzo" class="text-danger"></span>
                     
         </div>
 
